@@ -1,4 +1,3 @@
 import(RCurl)
 import(RJSONIO)
 export(get_guardian)
-export(get_guardian_full)
